# kbase

./: .gitignore  CMakeLists.txt  LICENSE  xmake.lua
include/kun/: config.h  memory.h
include/kun/base/: base.h  config.h  memory.h  minimal.h  traits.h  types.h
include/kun/base/config/: compiler.h  compiler_fallback.inc  platform.h  platform_fallback.inc
include/kun/base/functional/: bit.h  debugbreak.h  flag_tools.h  integer.h
include/kun/base/memory/: memory_baisc.h  memory_basic_default.h  memory_ops.h  memory_traits.h
include/kun/base/tools/: assert.h  assert_default.h  bit.h  integer_tools.h
include/kun/base/type/: float_types.h  integer_types.h
include/kun/memory/: memory_backend.h  memory_baisc.h  memory_ops.h  memory_traits.h
tests/: CMakeLists.txt  test_memory.cpp  test_tools.cpp  test_traits.cpp
xmake/: options.lua
